--- a/package.json
+++ b/package.json
@@ -1,12 +1,27 @@
 {
   "name": "js_tricks",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.ts",
+    "dev": "nodemon server.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": "Romany",
   "license": "ISC",
-  "description": ""
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/RomanyU1662160/js-tricks.git"
+  },
+  "bugs": {
+    "url": "https://github.com/RomanyU1662160/js-tricks/issues"
+  },
+  "homepage": "https://github.com/RomanyU1662160/js-tricks#readme",
+  "description": "",
+  "dependencies": {
+    "node-ts": "^5.1.2",
+    "nodemon": "^2.0.20",
+    "typescript": "^4.8.4"
+  }
 }
