--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.ts",
-    "dev": "nodemon server.ts"
+    "dev": "nodemon Design-Patterns/singleton.ts"
   },
   "keywords": [],
   "author": "Romany",
