--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
   "homepage": "https://github.com/RomanyU1662160/js-tricks#readme",
   "description": "",
   "dependencies": {
+    "lodash": "^4.17.21",
     "node-ts": "^5.1.2",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.17.20"
   }
 }
